@@ -12,7 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
-- Patch #1759: Backport of PEP 3129 class decorators
+- Issue #2067: file.__exit__() now calls subclasses' close() method.
+
+- Patch #1759: Backport of PEP 3129 class decorators.
 
 - Issue #1881: An internal parser limit has been increased. Also see 
   issue 215555 for a discussion.
